--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,11 +36,11 @@ jobs:
       - name: Show Xcode version
         run: xcodebuild -version
 
-      - name: Build
-        run: xcodebuild build -scheme SwiftMarkdown -destination 'platform=macOS,arch=arm64' -quiet
+      - name: Build (Universal)
+        run: xcodebuild build -scheme SwiftMarkdown -destination 'generic/platform=macOS' ONLY_ACTIVE_ARCH=NO -quiet
 
       - name: Test
-        run: xcodebuild test -scheme SwiftMarkdown -destination 'platform=macOS,arch=arm64' -resultBundlePath TestResults.xcresult
+        run: xcodebuild test -scheme SwiftMarkdown -destination 'platform=macOS' -resultBundlePath TestResults.xcresult
 
       - name: Upload test results
         uses: actions/upload-artifact@v4
