feat: integrate swift-markdown for GFM parsing
- Add swiftlang/swift-markdown as SPM dependency
- Create MarkdownParser with HTML and plain text output
- Support all GFM features: tables, strikethrough, task lists, code blocks
- Add comprehensive test suite (23 parser tests)
- Remove placeholder parse() function from SwiftMarkdownCore

Closes #4

--- a/project.yml
+++ b/project.yml
@@ -6,6 +6,11 @@ options:
   xcodeVersion: "15.0"
   generateEmptyDirectories: true
 
+packages:
+  swift-markdown:
+    url: https://github.com/swiftlang/swift-markdown
+    from: "0.4.0"
+
 settings:
   base:
     SWIFT_VERSION: "5.9"
@@ -51,6 +56,9 @@ targets:
     platform: macOS
     sources:
       - SwiftMarkdownCore
+    dependencies:
+      - package: swift-markdown
+        product: Markdown
     settings:
       base:
         PRODUCT_BUNDLE_IDENTIFIER: com.open-cli-collective.SwiftMarkdownCore
