--- a/project.yml
+++ b/project.yml
@@ -10,6 +10,12 @@ packages:
   swift-markdown:
     url: https://github.com/swiftlang/swift-markdown
     from: "0.4.0"
+  swift-tree-sitter:
+    url: https://github.com/tree-sitter/swift-tree-sitter
+    from: "0.9.0"
+  tree-sitter-swift:
+    url: https://github.com/alex-pinkus/tree-sitter-swift
+    branch: with-generated-files
 
 settings:
   base:
@@ -59,6 +65,10 @@ targets:
     dependencies:
       - package: swift-markdown
         product: Markdown
+      - package: swift-tree-sitter
+        product: SwiftTreeSitter
+      - package: tree-sitter-swift
+        product: TreeSitterSwift
     settings:
       base:
         PRODUCT_BUNDLE_IDENTIFIER: com.open-cli-collective.SwiftMarkdownCore
