--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,12 @@ jobs:
       - name: Show Xcode version
         run: xcodebuild -version
 
+      - name: Install xcodegen
+        run: brew install xcodegen
+
+      - name: Generate Xcode project
+        run: xcodegen generate
+
       - name: Build (Universal)
         run: xcodebuild build -scheme SwiftMarkdown -destination 'generic/platform=macOS' ONLY_ACTIVE_ARCH=NO -quiet
 
