feat: Add FileType library for MIME type validation of embedded images
Add image validation capability to detect mismatched MIME types in data URIs
by checking magic bytes. This helps prevent rendering of malformed or
potentially spoofed embedded images.

- Add FileType (1.0.3) dependency for magic byte detection
- Create ImageValidator utility with support for common image formats
- Add validateImages option to HTMLRenderer
- Invalid data URIs get marked with 'invalid-image' CSS class

Closes #11

--- a/project.yml
+++ b/project.yml
@@ -16,6 +16,9 @@ packages:
   tree-sitter-swift:
     url: https://github.com/alex-pinkus/tree-sitter-swift
     branch: with-generated-files
+  FileType:
+    url: https://github.com/velocityzen/FileType
+    from: "1.0.3"
 
 settings:
   base:
@@ -69,6 +72,8 @@ targets:
         product: SwiftTreeSitter
       - package: tree-sitter-swift
         product: TreeSitterSwift
+      - package: FileType
+        product: FileType
     settings:
       base:
         PRODUCT_BUNDLE_IDENTIFIER: com.open-cli-collective.SwiftMarkdownCore
