feat: Add CSS themes with light/dark mode support
Add CSS-based theme system for syntax highlighting using CSS custom
properties (variables) that automatically switch based on system
appearance via prefers-color-scheme media query.

- Add SyntaxTheme and SyntaxColors types with VS Code-inspired presets
- Add highlight.css with token classes and code block styling
- Update HTMLRenderer to load bundled CSS or fallback to generated
- Add comprehensive tests for theme system

Closes #8

--- a/project.yml
+++ b/project.yml
@@ -65,6 +65,9 @@ targets:
     platform: macOS
     sources:
       - SwiftMarkdownCore
+    resources:
+      - path: SwiftMarkdownCore/Resources
+        buildPhase: resources
     dependencies:
       - package: swift-markdown
         product: Markdown
