fix: embed Quick Look extension in app bundle
Add SwiftMarkdownQuickLook as a dependency of the main app with embed: true.
This ensures the extension is bundled in Contents/PlugIns/ for spacebar preview.

Closes #58

--- a/project.yml
+++ b/project.yml
@@ -33,6 +33,8 @@ targets:
       - SwiftMarkdown
     dependencies:
       - target: SwiftMarkdownCore
+      - target: SwiftMarkdownQuickLook
+        embed: true
     settings:
       base:
         PRODUCT_BUNDLE_IDENTIFIER: com.open-cli-collective.SwiftMarkdown
