fix: enable scrolling, text selection, copy, and drag-drop in document view
WKWebView intercepts drag events at the AppKit level. Uses a DragInterceptorView
overlay that:
- Sits on top of WebView and registers for drag types
- Returns nil from hitTest: so all mouse events pass through to WebView
- Intercepts only drag-and-drop events via the separate drag registration system

This allows both drag-and-drop AND scroll/copy/selection to work together.

Includes regression tests to prevent future breakage:
- testHitTestReturnsWebViewNotInterceptor: ensures mouse events reach WebView
- testContainerHasDragInterceptorOnTop: ensures drag interceptor is properly layered
- testOnFileDropCallbackIsWired: ensures drop callback is connected

History documented in code comments explaining why simpler approaches failed.

--- a/project.yml
+++ b/project.yml
@@ -97,6 +97,7 @@ targets:
       - SwiftMarkdownTests
     dependencies:
       - target: SwiftMarkdownCore
+      - target: SwiftMarkdown
     settings:
       base:
         PRODUCT_BUNDLE_IDENTIFIER: com.open-cli-collective.SwiftMarkdownTests
